# rogcat-viewer

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE
assets/: main.css
data/: Cargo.toml
data/src/: lib.rs
data/src/command/: adb.rs
domain/: Cargo.toml
domain/src/: choice_adb_device.rs  execute_logcat.rs  get_devices.rs  lib.rs
src/: lib.rs  main.rs
src/ui/: adjust_log_screen.rs  checkbox_fileter_screen.rs  device_screen.rs  filter_screen.rs  input_fileter_screen.rs  table_screen.rs
src/utils/: str_util.rs
utils/: Cargo.toml
utils/macros/: Cargo.toml
utils/macros/src/: lib.rs
utils/src/: lib.rs  mapper.rs
