[package]
name = "rogcat-viewer"
version = "0.1.0"
authors = ["janghee.lee <sj90947@gmail.com>"]
edition = "2021"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0" }

# log library
tracing = "0.1"
tracing-subscriber = "0.3.0"

# regex
regex = "1.11.1"

utils = { path = "utils" }
domain = { path = "domain" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
